ops/k8s/infrastructure/istio/app/customers-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers-service
spec:
  hosts:
    - customers-service.pet-clinic.svc.cluster.local
  http:
    - route:
        - destination:
            host: customers-service
            port:
              number: 8082
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customers-service
spec:
  host: customers-service
  subsets:
    - name: v1
      labels:
        version: 1.0.0
