ops/k8s/infrastructure/istio/app/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: admin-server
spec:
  host: admin-server
  subsets:
    - name: v1
      labels:
        version: 1.0.0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-gateway
spec:
  host: api-gateway
  subsets:
    - name: v1
      labels:
        version: 1.0.0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customers-service
spec:
  host: customers-service
  subsets:
    - name: v1
      labels:
        version: 1.0.0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vets-service
spec:
  host: vets-service
  subsets:
    - name: v1
      labels:
        version: 1.0.0
