ops/k8s/infrastructure/istio/app/vets-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vets-service
spec:
  hosts:
    - vets-service.pet-clinic.svc.cluster.local
  http:
    - route:
        - destination:
            host: vets-service
            port:
              number: 8083
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vets-service
spec:
  host: vets-service
  subsets:
    - name: v1
      labels:
        version: 1.0.0
