ops/k8s/infrastructure/istio/app/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway
spec:
  gateways:
    - api-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: api-gateway
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-server
spec:
  gateways: []
  hosts:
    - admin-server
  http:
     - route:
        - destination:
            host: admin-server
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers-service
spec:
  gateways: []
  hosts:
    - customers-service.pet-clinic.svc.cluster.local
  http:
    - route:
        - destination:
            host: customers-service
            port:
              number: 8082
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vets-service
spec:
  gateways: []
  hosts:
    - vets-service.pet-clinic.svc.cluster.local
  http:
    - route:
        - destination:
            host: vets-service
            port:
              number: 8083
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: visits-service
spec:
  gateways: []
  hosts:
    - visits-service
  http:
    - route:
        - destination:
            host: visits-service
            port:
              number: 8084
---
