ops/k8s/infrastructure/istio/app/visits-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: visits-service
spec:
  hosts:
    - visits-service
  http:
    - route:
        - destination:
            host: visits-service
            port:
              number: 8084
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: visits-service
spec:
  host: visits-service
  subsets:
    - name: v1
      labels:
        version: 1.0.0
